--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start:prod": "node dist/server.js",
     "start:dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
+    "seed:admin": "ts-node-dev --transpile-only src/seed/createAdmin.ts",
     "lint": "eslint src --ext .ts",
     "lint:fix": "npx eslint src --fix",
     "prettier": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\"",
@@ -23,6 +24,7 @@
     "express": "^5.1.0",
     "http-status": "^2.1.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.3",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.0",
     "validator": "^13.15.15",
@@ -33,6 +35,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/validator": "^13.15.2",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
